testcrate/ui/not-a-result.stderr
error[E0308]: mismatched types
 --> $DIR/not-a-result.rs:9:5
  |
9 |     3
  |     ^ expected enum `std::result::Result`, found integral variable
  |
  = note: expected type `std::result::Result<_, _>`
             found type `{integer}`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
 --> $DIR/not-a-result.rs:8:13
  |
8 | fn foo() -> u32 {
  |             ^^^ async functions must return a `Result` or a typedef of `Result`
  |
  = help: the trait `futures::__rt::IsResult` is not implemented for `u32`
  = note: required because of the requirements on the impl of `futures::__rt::MyFuture<u32>` for `impl futures::__rt::MyFuture<<[generator@$DIR/not-a-result.rs:8:17: 1:5 _] as std::ops::Generator>::Return>`
  = note: the return type of a function must have a statically known size

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:13:17
   |
13 |   fn bar() -> u32 {
   |  _________________^
14 | |     3
15 | | }
   | |_^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:14:5
   |
14 |     3
   |     ^ expected enum `std::result::Result`, found integral variable
   |
   = note: expected type `std::result::Result<_, _>`
              found type `{integer}`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:13:13
   |
13 | fn bar() -> u32 {
   |             ^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error: aborting due to 5 previous errors

